T5/jasonParser.java
/* Generated By:JavaCC: Do not edit this line. jasonParser.java */
import java.io.*;
import jasonParser.Simbolo;
import java.util.Stack;

public class jasonParser implements jasonParserConstants {
	private int nivelcorr;
	private Stack<Simbolo> stack;

	public static void main(String[] args) throws ParseException, TokenMgrError {
		jasonParser t=null;
		try {
			if (args.length == 0) {
				t = new jasonParser(System.in);
			} else if (args.length == 1) {
				// lê do arquivo cujo nome esta em args[0]

					FileInputStream fis = new FileInputStream(args[0]);
					t = new jasonParser(fis);
			} else {
			// Formato de entrada invalido
			//System.out.println("Formato de entrada invalido.");
			return;
		}
		t.start();
		} catch (Exception e) {
			//System.out.println(e.getMessage());
		} catch (Error e){
			//System.out.println(e.getMessage());
		}

	}

/* GRAMMAR START */
	final public void start() throws ParseException {
 Token t;
 stack = new Stack<Simbolo>();
	 //System.out.println("0 - program");
	program();
	t = jj_consume_token(0);
	while(!stack.empty()){
	Simbolo top = stack.pop();
	top.printAll();
	}
		 //System.out.println("SUCESSO");
	}

//--------------LUCAS
	final public void program() throws ParseException {
	 //System.out.println("1- <beginProgram>");
		System.out.println("INPP");
	header();
	declSec();
	block();
	jj_consume_token(DOT);
	}

	final public void header() throws ParseException {
		//System.out.println("2 - <Header> ");
	jj_consume_token(PROGRAM);
	jj_consume_token(ID);
	jj_consume_token(EOL);
	}

	final public void block() throws ParseException {
		//System.out.println("3 - <Block> ");
	++nivelcorr;
	jj_consume_token(BEGIN);
	statements();
	jj_consume_token(END);
	--nivelcorr;
	}

	final public void declSec() throws ParseException {
		//System.out.println("4 - <DeclSec> ");
	typeDeclSec();
	varDeclSec();
	subProgramDecls();
	}

	final public void typeDeclSec() throws ParseException {
		//System.out.println("5 - <TypeDeclSec> ");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case TYPES:
	jj_consume_token(TYPES);
	typeDecls();
	break;
	default:
	jj_la1[0] = jj_gen;
	;
	}
	}

	final public void typeDecls() throws ParseException {
		//System.out.println("6 - <TypeDecls> ");
	label_1:
	while (true) {
	typeDecl();
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case ID:
	;
	break;
	default:
	jj_la1[1] = jj_gen;
	break label_1;
	}
	}
	}

	final public void typeDecl() throws ParseException {
	Token t;
	Simbolo top = new Simbolo();
		//System.out.println("7 - <TypeDecl> ");
	t = jj_consume_token(ID);
	System.out.println(t.image);
	top.setId(t.toString());
	top.setNivel(nivelcorr);
	stack.push(top);
	typeSpecification();
	}

	final public void typeSpecification() throws ParseException {
		//System.out.println("8 - <TypeSpecification> ");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case ARRAY:
	arraySpecification();
	break;
	case RECORD:
	recordSpecification();
	break;
	default:
	jj_la1[2] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	}

	final public void arraySpecification() throws ParseException {
	Token t;
	Simbolo top;
		//System.out.println("9 - <ArraySpecification> ");
	jj_consume_token(ARRAY);
	dataType();
	jj_consume_token(LBRA);
	t = jj_consume_token(INT);
	top = stack.peek();
	top.setCat(Simbolo.categorias.VAR);
	top.setInf(0);
	top.setSup(Integer.parseInt(t.toString()) - 1);
	jj_consume_token(RBRA);
	jj_consume_token(EOL);
	}

	final public void recordSpecification() throws ParseException {
	Token t;
	Simbolo top, newtop;
		//System.out.println("10 - <RecordSpecification> ");
	jj_consume_token(RECORD);
	top = stack.peek();
	top.setCat(Simbolo.categorias.REGISTER);
	++nivelcorr;
	newtop = new Simbolo();
	top.setNivel(nivelcorr);
	varDecls();
	jj_consume_token(END);
	jj_consume_token(EOL);
	--nivelcorr;
	}

	final public void varDeclSec() throws ParseException {
		//System.out.println("11 - <VarDeclSec> ");
	label_2:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case VARIABLES:
	;
	break;
	default:
	jj_la1[3] = jj_gen;
	break label_2;
	}
	jj_consume_token(VARIABLES);
	varDecls();
	}
	}

	final public void varDecls() throws ParseException {
	 //System.out.println("12- <VarDecls>");
	label_3:
	while (true) {
	varDecl();
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case INTEGER:
	case REAL:
	case STRING:
	case ID:
	;
	break;
	default:
	jj_la1[4] = jj_gen;
	break label_3;
	}
	}
	}

//-----------FIM LUCAS
//-----------ANA
	final public void varDecl() throws ParseException {
	//System.out.println("TESTE");
	//System.out.println(nivelcorr);
	Simbolo top = new Simbolo();
	 //System.out.println("13- <VarDecl>");
	top.setNivel(nivelcorr);
	stack.push(top);
	dataType();
	idList();
	jj_consume_token(EOL);
	}

	final public void dataType() throws ParseException {
	Token t;
	Simbolo top;
	top = stack.peek();
	 //System.out.println("14 - <DataType>");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case REAL:
	jj_consume_token(REAL);
	top.setTipo(Simbolo.tipos.REAL);
	break;
	case INTEGER:
	jj_consume_token(INTEGER);
	top.setTipo(Simbolo.tipos.INTEGER);
	break;
	case ID:
	jj_consume_token(ID);
	break;
	case STRING:
	jj_consume_token(STRING);
	top.setTipo(Simbolo.tipos.STRING);
	break;
	default:
	jj_la1[5] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	}

	final public void idList() throws ParseException {
	Token t;
	Simbolo top;
	 //System.out.println("15 - <IdList>");
	t = jj_consume_token(ID);
	top = stack.peek();
	top.setId(t.toString());
	top.setNivel(nivelcorr);
	top.setCat(Simbolo.categorias.VAR);
	label_4:
	while (true) {
	Simbolo newtop = new Simbolo();
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case COM:
	;
	break;
	default:
	jj_la1[6] = jj_gen;
	break label_4;
	}
	jj_consume_token(COM);
	t = jj_consume_token(ID);
	newtop.setTipo(top.getTipo());
	newtop.setNivel(nivelcorr);
	newtop.setCat(Simbolo.categorias.VAR);
	newtop.setId(t.toString());
	stack.push(newtop);
	}
	}

	final public void subProgramDecls() throws ParseException {
	 //System.out.println("16 - <SubProgramDecls>");
	label_5:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case FUNCTION:
	case PROCEDURE:
	;
	break;
	default:
	jj_la1[7] = jj_gen;
	break label_5;
	}
	subProgramDecl();
	}
	}

	final public void subProgramDecl() throws ParseException {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case PROCEDURE:
	 //System.out.println("17 - <SubProgramDecl>");
	procDecl();
	break;
	case FUNCTION:
	functionDecl();
	break;
	default:
	jj_la1[8] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	}

	final public void procDecl() throws ParseException {
	Simbolo top = new Simbolo();
	++nivelcorr;
	top.setNivel(nivelcorr);
	stack.push(top);
	 //System.out.println("18 - <ProcDecl>");
	procHeader();
	subProgramDeclSec();
	block();
	jj_consume_token(EOL);
	}

	final public void procHeader() throws ParseException {
	Token t;
	Simbolo top;
	 //System.out.println("19 - <ProcHeader>");
	jj_consume_token(PROCEDURE);
	t = jj_consume_token(ID);
	jj_consume_token(EOL);
	top = stack.peek();
	top.setId(t.toString());
	top.setCat(Simbolo.categorias.PROCEDURE);
	}

	final public void subProgramDeclSec() throws ParseException {
	 //System.out.println("20 - <SubProgramDeclSec>");
	paramDeclSec();
	declSec();
	}

	final public void paramDeclSec() throws ParseException {
	 //System.out.println("21 -<ParamDeclSec>");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case PARAMETERS:
	jj_consume_token(PARAMETERS);
	paramDecls();
	break;
	default:
	jj_la1[9] = jj_gen;
	;
	}
	}

	final public void paramDecls() throws ParseException {
	 //System.out.println("22 -<ParamDecls>");
	label_6:
	while (true) {
	paramDecl();
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case VAR:
	case INTEGER:
	case REAL:
	case STRING:
	case ID:
	;
	break;
	default:
	jj_la1[10] = jj_gen;
	break label_6;
	}
	}
	}

//--------FIM ANA

//-------------- ADAMS 
	final public void paramDecl() throws ParseException {
	Token t;
	Simbolo top = new Simbolo();
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case INTEGER:
	case REAL:
	case STRING:
	case ID:
	 //System.out.println("23 -<paramDecl>");
	top.setClass(Simbolo.classes.VALOR);
	top.setNivel(nivelcorr);
	stack.push(top);
	dataType();
	t = jj_consume_token(ID);
	top.setId(t.toString());
	jj_consume_token(EOL);
	break;
	case VAR:
	jj_consume_token(VAR);
	top.setClass(Simbolo.classes.REFERENCIA);
	top.setNivel(nivelcorr);
	stack.push(top);
	dataType();
	t = jj_consume_token(ID);
	top.setId(t.toString());
	jj_consume_token(EOL);
	break;
	default:
	jj_la1[11] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	}

	final public void functionDecl() throws ParseException {
	 //System.out.println("24 -<functionDecl>");
	functionHeader();
	subProgramDeclSec();
	functionBlock();
	jj_consume_token(EOL);
	}

	final public void functionHeader() throws ParseException {
	Token t;
	Simbolo top = new Simbolo();
	 //System.out.println("25 -<functionHeader>");
	top.setNivel(nivelcorr);
	top.setCat(Simbolo.categorias.FUNCTION);
	jj_consume_token(FUNCTION);
	t = jj_consume_token(ID);
	top.setId(t.toString());
	stack.push(top);
	jj_consume_token(RETURNS);
	dataType();
	jj_consume_token(EOL);
	}

	final public void functionBlock() throws ParseException {
	 //System.out.println("26 -<functionBlock>");
	jj_consume_token(BEGIN);
	label_7:
	while (true) {
	statement();
	jj_consume_token(EOL);
	if (jj_2_1(2)) {
	;
	} else {
	break label_7;
	}
	}
	returnStatement();
	jj_consume_token(END);
	}

	final public void statements() throws ParseException {
	 //System.out.println("27 -<statements>");
	statement();
	label_8:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case EOL:
	;
	break;
	default:
	jj_la1[12] = jj_gen;
	break label_8;
	}
	jj_consume_token(EOL);
	statement();
	}
	}

	final public void statement() throws ParseException {
	Token t;
	Simbolo node;
	 //System.out.println("28 -<statement>");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case CALL:
	case IF:
	case SET:
	case UNTIL:
	case WHILE:
	case WRITE:
	case READ:
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case WRITE:
	case READ:
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case READ:
		jj_consume_token(READ);
		System.out.println("LEIT");
		break;
	case WRITE:
		jj_consume_token(WRITE);
		System.out.println("INPR");
		break;
	default:
		jj_la1[13] = jj_gen;
		jj_consume_token(-1);
		throw new ParseException();
	}
	jj_consume_token(ID);
	variable();
	break;
	case SET:
	jj_consume_token(SET);
	t = jj_consume_token(ID);
	//node = stack.searchById(t.toString(), stack);
	variable();
	jj_consume_token(COMPARE);
	expression();
	break;
	case IF:
	jj_consume_token(IF);
	condition();
	jj_consume_token(THEN);
	statements();
	elseClause();
	break;
	case WHILE:
	jj_consume_token(WHILE);
	condition();
	jj_consume_token(DO);
	statements();
	jj_consume_token(ENDWHILE);
	break;
	case UNTIL:
	jj_consume_token(UNTIL);
	condition();
	jj_consume_token(DO);
	statements();
	jj_consume_token(ENDUNTIL);
	break;
	case CALL:
	jj_consume_token(CALL);
	jj_consume_token(ID);
	argList();
	break;
	default:
	jj_la1[14] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	break;
	default:
	jj_la1[15] = jj_gen;
	;
	}
	}

	final public void elseClause() throws ParseException {
	 //System.out.println("29 -<elseClause>");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case ELSE:
	jj_consume_token(ELSE);
	statements();
	break;
	default:
	jj_la1[16] = jj_gen;
	;
	}
	jj_consume_token(ENDIF);
	}

	final public void returnStatement() throws ParseException {
	 //System.out.println("30 -<returnStatement>");
	jj_consume_token(RETURN);
	jj_consume_token(LBAR);
	condition();
	jj_consume_token(RBAR);
	}

	final public void argList() throws ParseException {
	 //System.out.println("31 -<argList>");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case LBAR:
	jj_consume_token(LBAR);
	arguments();
	jj_consume_token(RBAR);
	break;
	default:
	jj_la1[17] = jj_gen;
	;
	}
	}

	final public void arguments() throws ParseException {
	 //System.out.println("32 -<arguments>");
	argument();
	label_9:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case COM:
	;
	break;
	default:
	jj_la1[18] = jj_gen;
	break label_9;
	}
	jj_consume_token(COM);
	argument();
	}
	}

//---------- FIM ADAMS

//---------- QUIABO
	final public void condition() throws ParseException {
		//System.out.println("33 - <Condition>\u005cn");
	compoundCondition();
	label_10:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case REVBAR:
	;
	break;
	default:
	jj_la1[19] = jj_gen;
	break label_10;
	}
	jj_consume_token(REVBAR);
	compoundCondition();
	}
	}

	final public void compoundCondition() throws ParseException {
		//System.out.println("34 - <CompoundCondition>\u005cn");
	simpleCondition();
	label_11:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case AND:
	;
	break;
	default:
	jj_la1[20] = jj_gen;
	break label_11;
	}
	jj_consume_token(AND);
	simpleCondition();
	}
	}

	final public void simpleCondition() throws ParseException {
		//System.out.println("35 - <SimpleCondition>\u005cn");
	expression();
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case NOT:
	case COMPARE:
	case LEQUAL:
	case HEQUAL:
	case LESS:
	case HIGHER:
	case DIFF:
	relOp();
	expression();
	break;
	default:
	jj_la1[21] = jj_gen;
	;
	}
	}

	final public void expression() throws ParseException {
		//System.out.println("36 - <Expression>\u005cn");
	term();
	label_12:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case SUM:
	case SUB:
	;
	break;
	default:
	jj_la1[22] = jj_gen;
	break label_12;
	}
	addOp();
	term();
	}
	}

	final public void addOp() throws ParseException {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case SUM:
		//System.out.println("37 - <AddOp>\u005cn");
	jj_consume_token(SUM);
	break;
	case SUB:
	jj_consume_token(SUB);
	break;
	default:
	jj_la1[23] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	}

	final public void term() throws ParseException {
		//System.out.println("38 - <Term>\u005cn");
	unary();
	label_13:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case MUL:
	case DIV:
	;
	break;
	default:
	jj_la1[24] = jj_gen;
	break label_13;
	}
	mulOp();
	unary();
	}
	}

	final public void mulOp() throws ParseException {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case MUL:
		//System.out.println("39 - <MulOp>\u005cn");
	jj_consume_token(MUL);
	break;
	case DIV:
	jj_consume_token(DIV);
	break;
	default:
	jj_la1[25] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	}

	final public void unary() throws ParseException {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case SUM:
	case SUB:
		//System.out.println("40 - <Unary>\u005cn");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case SUM:
	jj_consume_token(SUM);
	break;
	case SUB:
	jj_consume_token(SUB);
	break;
	default:
	jj_la1[26] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	unary();
	break;
	default:
	jj_la1[27] = jj_gen;
	factor();
	}
	}

	final public void factor() throws ParseException {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case ID:
		//System.out.println("41 - <Factor>\u005cn");
	jj_consume_token(ID);
	argList();
	break;
	case INT:
	jj_consume_token(INT);
	break;
	case FLOAT:
	jj_consume_token(FLOAT);
	break;
	case STR:
	jj_consume_token(STR);
	break;
	case NOT:
	jj_consume_token(NOT);
	factor();
	break;
	case LBAR:
	jj_consume_token(LBAR);
	condition();
	jj_consume_token(RBAR);
	break;
	default:
	jj_la1[28] = jj_gen;
	variable();
	}
	}

	final public void variable() throws ParseException {
		//System.out.println("42 - <Variable>\u005cn");
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case LBRA:
	jj_consume_token(LBRA);
	expression();
	jj_consume_token(RBRA);
	break;
	default:
	jj_la1[29] = jj_gen;
	;
	}
	label_14:
	while (true) {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case DOT:
	;
	break;
	default:
	jj_la1[30] = jj_gen;
	break label_14;
	}
	jj_consume_token(DOT);
	jj_consume_token(ID);
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case LBRA:
	jj_consume_token(LBRA);
	expression();
	jj_consume_token(RBRA);
	break;
	default:
	jj_la1[31] = jj_gen;
	;
	}
	}
	}

	final public void relOp() throws ParseException {
	switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
	case COMPARE:
		//System.out.println("43 - <RelOp>\u005cn");
	jj_consume_token(COMPARE);
	break;
	case NOT:
	jj_consume_token(NOT);
	break;
	case HIGHER:
	jj_consume_token(HIGHER);
	break;
	case LESS:
	jj_consume_token(LESS);
	break;
	case LEQUAL:
	jj_consume_token(LEQUAL);
	break;
	case HEQUAL:
	jj_consume_token(HEQUAL);
	break;
	case DIFF:
	jj_consume_token(DIFF);
	break;
	default:
	jj_la1[32] = jj_gen;
	jj_consume_token(-1);
	throw new ParseException();
	}
	}

	final public void argument() throws ParseException {
		//System.out.println("44 - <Argument>\u005cn");
	condition();
	}

	private boolean jj_2_1(int xla) {
	jj_la = xla; jj_lastpos = jj_scanpos = token;
	try { return !jj_3_1(); }
	catch(LookaheadSuccess ls) { return true; }
	finally { jj_save(0, xla); }
	}

	private boolean jj_3R_15() {
	Token xsp;
	xsp = jj_scanpos;
	if (jj_3R_16()) jj_scanpos = xsp;
	return false;
	}

	private boolean jj_3_1() {
	if (jj_3R_15()) return true;
	if (jj_scan_token(EOL)) return true;
	return false;
	}

	private boolean jj_3R_32() {
	if (jj_scan_token(ID)) return true;
	return false;
	}

	private boolean jj_3R_31() {
	Token xsp;
	xsp = jj_scanpos;
	if (jj_3R_32()) {
	jj_scanpos = xsp;
	if (jj_scan_token(60)) {
	jj_scanpos = xsp;
	if (jj_scan_token(61)) {
	jj_scanpos = xsp;
	if (jj_scan_token(64)) {
	jj_scanpos = xsp;
	if (jj_3R_33()) {
	jj_scanpos = xsp;
	if (jj_3R_34()) {
	jj_scanpos = xsp;
	if (jj_3R_35()) return true;
	}
	}
	}
	}
	}
	}
	return false;
	}

	private boolean jj_3R_24() {
	if (jj_3R_25()) return true;
	return false;
	}

	private boolean jj_3R_33() {
	if (jj_scan_token(NOT)) return true;
	return false;
	}

	private boolean jj_3R_35() {
	if (jj_3R_36()) return true;
	return false;
	}

	private boolean jj_3R_28() {
	Token xsp;
	xsp = jj_scanpos;
	if (jj_3R_29()) {
	jj_scanpos = xsp;
	if (jj_3R_30()) return true;
	}
	return false;
	}

	private boolean jj_3R_29() {
	Token xsp;
	xsp = jj_scanpos;
	if (jj_scan_token(48)) {
	jj_scanpos = xsp;
	if (jj_scan_token(49)) return true;
	}
	return false;
	}

	private boolean jj_3R_23() {
	if (jj_3R_24()) return true;
	return false;
	}

	private boolean jj_3R_38() {
	if (jj_scan_token(DOT)) return true;
	return false;
	}

	private boolean jj_3R_27() {
	if (jj_3R_28()) return true;
	return false;
	}

	private boolean jj_3R_30() {
	if (jj_3R_31()) return true;
	return false;
	}

	private boolean jj_3R_22() {
	if (jj_scan_token(CALL)) return true;
	if (jj_scan_token(ID)) return true;
	return false;
	}

	private boolean jj_3R_21() {
	if (jj_scan_token(UNTIL)) return true;
	if (jj_3R_23()) return true;
	return false;
	}

	private boolean jj_3R_20() {
	if (jj_scan_token(WHILE)) return true;
	if (jj_3R_23()) return true;
	return false;
	}

	private boolean jj_3R_19() {
	if (jj_scan_token(IF)) return true;
	if (jj_3R_23()) return true;
	return false;
	}

	private boolean jj_3R_34() {
	if (jj_scan_token(LBAR)) return true;
	return false;
	}

	private boolean jj_3R_18() {
	if (jj_scan_token(SET)) return true;
	if (jj_scan_token(ID)) return true;
	return false;
	}

	private boolean jj_3R_26() {
	if (jj_3R_27()) return true;
	return false;
	}

	private boolean jj_3R_37() {
	if (jj_scan_token(LBRA)) return true;
	return false;
	}

	private boolean jj_3R_36() {
	Token xsp;
	xsp = jj_scanpos;
	if (jj_3R_37()) jj_scanpos = xsp;
	while (true) {
	xsp = jj_scanpos;
	if (jj_3R_38()) { jj_scanpos = xsp; break; }
	}
	return false;
	}

	private boolean jj_3R_25() {
	if (jj_3R_26()) return true;
	return false;
	}
